Adding more features and security